[metadata]
name = pycpsdata
version = 0.2.0
description = Load CPS microdata into a pandas DataFrame using the Census API.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Matt Saenz
author_email = mattsaenz165@gmail.com
url = https://github.com/matt-saenz/PyCPS
project_urls =
    Bug Reports = https://github.com/matt-saenz/PyCPS/issues
    Source = https://github.com/matt-saenz/PyCPS
keywords =
    pycpsdata
    pycps
    cps
    current population survey
    microdata
    census bureau
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = pycps
python_requires = >=3.10, <4
install_requires =
    pandas>=1.5.0
    requests>=2.28.1
